--- a/coursework.html
+++ b/coursework.html
@@ -18,10 +18,6 @@
 		body {
 			font-family: 'Raleway', sans-serif;
 		}
-		.fakeimg {
-			height: 200px;
-			background: #aaa;
-		}
 		/* For the title text 'Jason Kim' */
 		.display-3 {
 			font-family: 'Julius Sans One', sans-serif;
@@ -200,15 +196,15 @@
 				<p><a href="https://docs.google.com/document/d/1cXFDRDQ9VSUW5-hsEE6N7_3_iCoNwm3BYiS8EA6_F7A/edit?usp=sharing" class="syllabus">Link to syllabus</a></p>
 				<p><b>Projects in MATLAB:</b></p>
 				<ul>
-					<li><p>Intro to finite element analysis</p></li>
-					<li><p>Image processing to reduce noise and detect tumors</p></li>
-					<li><p>Analyses and plots of environmental conditions</p></li>
+					<li><p>Intro to finite element analysis.</p></li>
+					<li><p>Image processing to reduce noise and detect tumors.</p></li>
+					<li><p>Analyses and plots of environmental conditions.</p></li>
 				</ul>
 				<p><b>Projects in C++:</b></p>
 				<ul>
-					<li><p>Braking coefficient calculator</p></li>
-					<li><p>Simple natural language processing using keyword weights to classify reviews as real or fake</p></li>
-					<li><p>Naive (nearest neighbor algorithm) traveling salesperson problem solver</p></li>
+					<li><p>Braking coefficient calculator.</p></li>
+					<li><p>Simple natural language processing using keyword weights to classify reviews as real or fake.</p></li>
+					<li><p>Naive (nearest neighbor algorithm) traveling salesperson problem solver.</p></li>
 				</ul>
 			</div>
 		</div>
