--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
 		.jumbotron {
 			background-color: black;
 			margin-top: -10px;
-			background-image: url("img/test.jpg");
+			background-image: url("img/header.jpg");
 			background-size: cover;
 			text-align: center;
 			padding-bottom: 30px;
