Starting Spanish translations

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						    	<div class="btn-group">
 						    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
 						    		<a href="korean/index-kr.html" role="button" class="btn btn-light">한국어</a>
-						    		<a href="#" role="button" class="btn btn-light">Español</a>
+						    		<a href="spanish/index-es.html" role="button" class="btn btn-light">Español</a>
 						    	</div>
 						    </div>
 					    </div>
