--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="es">
 <head>
-	<title>김종성</title>
+	<title>Jason Kim</title>
 	<meta charset="utf-8">
-	<!-- Bootstrap 4를 위한 링크와 스크립트 -->
+	<!-- Links and scripts for Bootstrap 4 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<!-- 한글 폰트: 네이버 나눔고딕, 나눔명조 -->
-	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Nanum+Myeongjo&display=swap" rel="stylesheet">
+	<!-- Link for Raleway from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<!-- Link for Julius Sans One from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
 	<style>
-		/* 나눔고딕을 기본으로 설정 */
+		/* Raleway as default for body */
 		body {
-			font-family: 'Nanum Gothic', sans-serif;
+			font-family: 'Raleway', sans-serif;
 		}
-		/* 제목 폰트 */
+		/* For the title text 'Jason Kim' */
 		.display-3 {
-			font-family: 'Nanum Myeongjo', serif;
+			font-family: 'Julius Sans One', sans-serif;
 			color: white;
 			margin-bottom: 20px;
 			margin-left: 50px;
 			margin-right: 50px;
 		}
-		/* 제목 내비게이션 링크 */
+		/* Default and hover colors for nav links */
 		.navi {
 			color: white;
 		}
 		.navi:hover {
 			color: #FFA500;
 		}
-		/* 연락처 링크 */
+		/* For contact links*/
 		.link {
 			background-color: #F5F5F5;
 			color: black;
@@ -41,7 +43,7 @@
 			color: #FFA500;
 			margin-top: 10px;
 		}
-		/* 전화번호는 색깔 변동 없음 */
+		/* No hover and action for phone number */
 		#link-cell {
 			background-color: #F5F5F5;
 			color: black;
@@ -66,19 +68,19 @@
 <body>
 	<!-- Purple top jumbotron with my name and links to the three pages. -->
 	<div class="jumbotron jumbotron-fluid">
-		<h1 class="display-3">金 鐘聲</h1>
+		<h1 class="display-3">Jason Kim</h1>
 		<div class="container">
 			<div class="centered">
 				<!-- Trick to reduce bottom margin of jumbotron -->
 				<div class="row" style="margin-bottom: -10px">
 					<div class="col-sm-4">
-						<a class="nav-link navi" href="index-kr.html" style="color: #FFA500"><h3>자기소개</h3></a>
+						<a class="nav-link navi" href="index-es.html" style="color: #FFA500"><h3>Información</h3></a>
 					</div>
 					<div class="col-sm-4">
-						<a class="nav-link navi" href="coursework-kr.html"><h3>학업 정보</h3></a>
+						<a class="nav-link navi" href="coursework-es.html"><h3>Estudios</h3></a>
 					</div>
 					<div class="col-sm-4">
-						<a class="nav-link navi" href="projects-kr.html"><h3>프로젝트</h3></a>
+						<a class="nav-link navi" href="projects-es.html"><h3>Proyectos</h3></a>
 					</div>
 				</div>
 			</div>
@@ -93,7 +95,7 @@
 		    	<div class="col-md-12">
 					<img src="../img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
 					<hr>
-					<h3>연락처</h3>
+					<h3>Contáctese conmigo:</h3>
 					<!-- Buttons for contact info plus resume -->
 					<ul class="nav nav-pills flex-column" style="margin: auto">
 						<li class="nav-item">
@@ -103,7 +105,7 @@
 						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link link" href="../files/resume.pdf" download><b>이력서 (영문)</b></a>
+						  <a class="nav-link link" href="files/resume.pdf" download><b>Currículum (Inglés)</b></a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://github.com/jasonkimprojects"><b>GitHub</b></a>
@@ -122,29 +124,32 @@
 		    <!-- Paragraphs -->
 		    <div class="col-md-8">
 		    	<div class="col-md-12">
-					<h2 style="color: #FFA500">안녕하세요, 김종성입니다.</h2>
-					<p>저는 미국 미시간 주 앤 아버 시 소재 미시간 대학교 3학년에 재학 중입니다. 전공은 본교 공과대학의 컴퓨터과학과이며, 부전공은 본교 인문자연과학대학의 생물학과입니다. 저의 학업 관련 관심사는 사이버 보안과 생물정보학, 컴퓨터 비전, 기계학습, 데이터베이스 등을 포함한 의료용 소프트웨어 개발입니다.</p>
+					<h2 style="color: #FFA500">¡Hola, me llamo Jason!</h2>
+					<p>Para propósitos oficiales, mi nombre legal es Jong Sung. Me llamo Jason, sin embargo, por dos razones: es más fácil de pronunciar, y la mayoría de sitios web que analizan mi nombre delimita el espacio y me llama Jong. ¡Llámeme por lo que sea más fácil para usted!</b></p>
 					<br>
-					<h2>저는 개발을</h2>
-					<p>C++, C, 그리고 Java어로 주로, 그리고 가장 오랬동안 하였습니다. 최근에는 수업 내 프로젝트 여러 가지로 Python을 많이 습득하는 중입니다. 또한 이 웹사이트를 만들며 HTML과 CSS를 복습하고 응용해 나가고 있습니다. 능숙하지는 않지만 어느 정도 지식을 가지고 있는 언어는 Bash, MATLAB, JavaScript, SQL 그리고 몇 가지 종류의 어셈블리어 (x86, MIPS, ARMv8) 가 있습니다.</p>
+					<h2>Estoy en el 3er grado</h2>
+					<p>A la Universidad de Míchigan, situada en Ann Arbor, MI. Mi especialización es ciencias de la computación en el Colegio de Ingeniería  y mi subespecialización es biología en el Colegio de Literatura, Ciencia, y los Artes. Soy apasionado sobre seguridad cibernética y desarrollo de software médico, como bioinformática, visión por computador, aprendizaje automático, bases de datos, etc.</p>
 					<br>
-					<h2>이 웹사이트는</h2>
-					<p>한국어와 같이 저의 모국어인 영어 (English), 그리고 중간 정도의 구사 능력이 있는 스페인어 (Español) 로도 열람하실 수 있습니다. 제 포트폴리오에 관심이 있으시다면, 화면 좌측의 링크를 통해 이력서를 내려받으시거나 연락을 주시기 바랍니다!</p>
+					<h2>Yo desarrollo</h2>
+					<p>En C++, C, y Java hábilmente. He estado aprendiendo mucho Python recientemente de proyectos academicos. Escribir este sitio web ha mejorado mis habilidades en HTML y CSS. Algunos idiomas más que hablo más o menos son Bash, MATLAB, JavaScript, SQL, y algunos tipos de assembly (x86, MIPS, ARMv8).</p>
+					<br>
+					<h2>Mi sitio web</h2>
+					<p>Es disponible también en Inglés y Coreano, mis lenguas maternas, además de Español. ¡Tome una copia de mi currículum o contáctese conmigo por las conexiones a la izquierda!</p>
 					<!-- Language selector buttons -->
 					<div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
 						<div class="row">
 							<div class="col-md-12">
 						    	<div class="btn-group">
 						    		<a href="../index.html" role="button" class="btn btn-light">English</a>
-						    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">한국어</a>
-						    		<a href="../spanish/index-es.html" role="button" class="btn btn-light">Español</a>
+						    		<a href="../korean/index-kr.html" role="button" class="btn btn-light">한국어</a>
+						    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">Español</a>
 						    	</div>
 						    </div>
 					    </div>
 					</div>
 					<hr>
-					<h6><small>배경 이미지 저작권: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
-					<h6><small>데스크탑과 모바일 화면 간 호환성을 위해 Bootstrap 프레임워크의 도움을 받아, 처음부터 시작하여 열정을 가지고 만들었습니다.</small></h6>
+					<h6><small>Créditos para la imagen de fondo: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
+					<h6><small>Hecho desde cero con pasión, con la ayuda de Bootstrap para la compatibilidad entre pantallas de computadores y móviles.</small></h6>
 		  		</div>
 		  	</div>
   		</div>
