--- a/spanish/coursework-es.html
+++ b/spanish/coursework-es.html
@@ -152,7 +152,7 @@
 				<p><a href="https://www.eecs.umich.edu/courses/eecs281/syllabus" class="syllabus">Enlace al programa de estudios (Inglés)</a></p>
 				<p><b>Proyectos en C++:</b></p>
 				<ul>
-					<li><p>Solucionador de word morph. Toma una palabra inicial, una palabra final, un diccionario, y un conjunto de reglas. Implementado con apilares, colas, y deques.</p></li>
+					<li><p>Solucionador de word morph. Toma una palabra inicial, una palabra final, un diccionario, y un conjunto de reglas. Implementado con montónes, colas, y deques.</p></li>
 					<li><p>Solucionador para escapar de la mina, implementado con colas de prioridad.</p></li>
 					<li><p>Implementaciones de montón binario y montón pairing desde cero.</p></li>
 					<li><p>Implementación de la tabla de picadillo desde cero.</p></li>
@@ -169,58 +169,58 @@
 		</div>
 		<div class="row course">
 			<div class="col">
-				<h3>280, Programming and Introductory Data Structures</h3>
-				<p><a href="https://eecs280staff.github.io/eecs280.org/assets/Syllabus.pdf" class="syllabus">Link to syllabus</a></p>
-				<p><b>Projects in C++:</b></p>
+				<h3>280, Programación y Estructuras de Datos Introductorias</h3>
+				<p><a href="https://eecs280staff.github.io/eecs280.org/assets/Syllabus.pdf" class="syllabus">Enlace al programa de estudios (Inglés)</a></p>
+				<p><b>Proyectos en C++:</b></p>
 				<ul>
-					<li><p>Image processing program with seam carving algorithm, which is implemented by introductory computer vision.</p></li>
-					<li><p>Euchre card game simulator. Exercise for object oriented programming, arrays, and vectors.</p></li>
-					<li><p>Reverse Polish Notation calculator with implementation from scratch for a linked list and stack.</p></li>
-					<li><p>Forum post analyzer using log-likelihood machine learning. Implemented a binary search tree from scratch for one part. Exercise for recursion.</p></li>
+					<li><p>Un programa que procesa imágenes con seam carving algoritmo, lo que está implementado por visión por computador introductoria.</p></li>
+					<li><p>Simulador de Euchre, un juego de cartas. Un ejercicio para programación orientada a objetos, ordenamientos, y vectores.</p></li>
+					<li><p>Calculadora de Reverse Polish Notation con implementación desde cero para una lista enlazada y un montón.</p></li>
+					<li><p>Analizador de textos del foro usando aprendizaje automático basado en log-likelihood. Implementado un árbol binario de búsqueda desde cero para una parte. Un ejercicio para recursión.</p></li>
 				</ul>
-				<p><b>Other project work:</b></p>
+				<p><b>Otro trabajo de proyecto:</b></p>
 				<ul>
-					<li><p>For most (if not all) projects above, students were instructed to devise their own test cases, handwritten or randomly generated. The test cases were graded against a set of buggy instructor implementations for their ability to catch bugs.</p></li>
+					<li><p>Para la mayoría de estos proyectos, los estudiantes fueron instructados de crear sus casos de prueba propios, escritos o generados aleatoriamente. Los casos de prueba fueron calificados contra un conjunto de implementaciones con errores, hecho por los instructores, para su abilidad de descubrir errores.</p></li>
 				</ul>
 			</div>
 		</div>
 		<div class="row course">
 			<div class="col">
-				<h1><b>Engineering</b></h1>
+				<h1><b>Ingeniería</b></h1>
 				<hr>
 			</div>
 		</div>
 		<div class="row course">
 			<div class="col">
-				<h3>101, Introduction to Computers and Programming</h3>
-				<p><a href="https://docs.google.com/document/d/1cXFDRDQ9VSUW5-hsEE6N7_3_iCoNwm3BYiS8EA6_F7A/edit?usp=sharing" class="syllabus">Link to syllabus</a></p>
-				<p><b>Projects in MATLAB:</b></p>
+				<h3>101, Introducción a Computadoras y Programación</h3>
+				<p><a href="https://docs.google.com/document/d/1cXFDRDQ9VSUW5-hsEE6N7_3_iCoNwm3BYiS8EA6_F7A/edit?usp=sharing" class="syllabus">Enlace al programa de estudios (Inglés)</a></p>
+				<p><b>Proyectos en MATLAB:</b></p>
 				<ul>
-					<li><p>Intro to finite element analysis.</p></li>
-					<li><p>Image processing to reduce noise and detect tumors.</p></li>
-					<li><p>Analyses and plots of environmental conditions.</p></li>
+					<li><p>Introducción al análisis de elementos finitos.</p></li>
+					<li><p>Procesamiento de imágenes para bajar ruido y detectar tumores.</p></li>
+					<li><p>Análisis y gráficos de condiciones ambientales.</p></li>
 				</ul>
-				<p><b>Projects in C++:</b></p>
+				<p><b>Proyectos en C++:</b></p>
 				<ul>
-					<li><p>Braking coefficient calculator.</p></li>
-					<li><p>Simple natural language processing using keyword weights to classify reviews as real or fake.</p></li>
-					<li><p>Naive (nearest neighbor algorithm) traveling salesperson problem solver.</p></li>
+					<li><p>Calculadora del coeficiente del frenado.</p></li>
+					<li><p>Procesamiento natural del lenguaje simple usando pesos de palabras clave para clasificar críticas como genuina o falsa.</p></li>
+					<li><p>Solucionador del problema de viajante ingenuino (usando el algoritmo del vecino más cercano).</p></li>
 				</ul>
 			</div>
 		</div>
 		<div class="row course">
 			<div class="col">
-				<h1><b>Mathematics</b></h1>
+				<h1><b>Matemáticas</b></h1>
 				<hr>
 			</div>
 		</div>
 		<div class="row course">
 			<div class="col">
-				<h3>214, Applied Linear Algebra</h3>
-				<p><a href="http://dept.math.lsa.umich.edu/courses/214/syllabus.html" class="syllabus">Link to syllabus</a></p>
-				<p><b>Projects in MATLAB:</b></p>
+				<h3>214, Álgebra Lineal Aplicada</h3>
+				<p><a href="http://dept.math.lsa.umich.edu/courses/214/syllabus.html" class="syllabus">Enlace al programa de estudios (Inglés)</a></p>
+				<p><b>Proyectos en MATLAB:</b></p>
 				<ul>
-					<li><p>Group final project - theoretical and actual runtime comparison for QR-factorization algorithms. Compared Gram-Schmidt orthonormalization, Householder reflection, and Givens rotation.</p></li>
+					<li><p>Proyecto final colaborativo - una comparación del tiempo de ejecución teorética y verdadera, para algoritmos de QR-factorización. Hemos comparado el proceso de Gram-Schmidt, reflexión de Householder, y rotación de Givens.</p></li>
 				</ul>
 			</div>
 		</div>
