Spanish version complete

--- a/spanish/projects-es.html
+++ b/spanish/projects-es.html
@@ -85,13 +85,13 @@
 			<div class="col">
 				<!-- Header for project description -->
 				<div class="alert alert-success">
-					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: #FFA500">here</a> in my GitHub account. Clicking on the title of each project links to its repository.</p>
+					<p style="margin-bottom: 0px">La siguiente es una lista de mis proyectos personales y proyectos colaborativos donde he contribuido considerablemente. Se puede ver su código fuente <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: #FFA500">aquí</a> en mi cuenta GitHub. Hacer click en el título de cada proyecto enlace a su repositorio.</p>
 				</div>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
-				<h1><b>Personal Projects</b></h1>
+				<h1><b>Proyectos Personales</b></h1>
 				<hr>
 			</div>
 		</div>
@@ -99,51 +99,51 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">Library</span> 
-					<span class="badge badge-light">File I/O</span> 
-					<span class="badge badge-light">Image processing</span> 
-					<span class="badge badge-light">Data structures</span> 
-					<span class="badge badge-light">Error handling</span> 
-					<span class="badge badge-light">Object oriented programming</span>
+					<span class="badge badge-light">Librería</span> 
+					<span class="badge badge-light">Entrada y salida de archivos</span> 
+					<span class="badge badge-light">Procesamiento de imágenes</span> 
+					<span class="badge badge-light">Estructuras de datos</span> 
+					<span class="badge badge-light">Manejo de errores</span> 
+					<span class="badge badge-light">Programación orientada a objetos</span>
 				</h6>
-				<p>A short library for bitmap image reading and writing. Contains basic image editing functions (reflection, transposition, rotation, crop, superimpose, color filters). Useful for extracting pixels and their RGB values as vectors of structs of plain old data.</p>
+				<p>Una librería corta para leer y escribir imágenes bitmap. Contiene funciones básicas para editar imágenes (reflejar, transponer, girar, cortar, sobreponer, filtros de color). Conveniente para extraer píxeles y sus valores RGB como vectores de estructuras.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/easylsb" class="name">EasyLSB (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">Steganography</span> 
-					<span class="badge badge-light">Least significant bit</span> 
-					<span class="badge badge-light">Bit manipulation</span> 
-					<span class="badge badge-light">Error handling</span> 
-					<span class="badge badge-light">Inheritance</span> 
-					<span class="badge badge-light">Custom iterator</span>
+					<span class="badge badge-light">Esteganografía</span> 
+					<span class="badge badge-light">Bit menos significativo</span> 
+					<span class="badge badge-light">Manipulación de bits</span> 
+					<span class="badge badge-light">Manejo de errores</span> 
+					<span class="badge badge-light">Herencia</span> 
+					<span class="badge badge-light">Iterador personalizado</span>
 				</h6>
-				<p>A program for encoding and decoding text messages inside bitmap images using least significant bit steganography. Results in little to no visible difference in the image. Includes my BitmapParser library.</p>
+				<p>Un programa para cifrar y decifrar mensajes de texto adentro de imágenes bitmap usando esteganografía del bit menos significativo. Resulta en poco o no diferencia visible en la imagen. Incluye mi librería BitmapParser.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/jasonkimprojects.github.io" class="name">jasonkimprojects.github.io (HTML, CSS, Bootstrap)</a></h3>
-				<p>This website. Contains links to my GitHub and LinkedIn profile and resume. Overview of my academic and personal work.</p>
+				<p>Este sitio web. Contiene enlaces a mi cuenta GitHub y LinkedIn, y mi currículum. Un sumario de mi trabajo académico y personal.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" class="name">Evo(lved) (Android)</a></h3>
 				<h6>
-					<span class="badge badge-light">Custom firmware</span> 
+					<span class="badge badge-light">Firmware personalizado</span> 
 					<span class="badge badge-light">Scripting</span> 
 					<span class="badge badge-light">Linux</span> 
-					<span class="badge badge-light">Optimization</span>
+					<span class="badge badge-light">Mejoramiento</span>
 				</h6>
-				<p>ROM for my first smartphone, the HTC Evo 4G+. Android 2.3 Gingerbread based on stock firmware.</p>
+				<p>ROM para mi primero teléfono inteligente, el HTC Evo 4G+. Android 2.3 Gingerbread basado en el firmware del valor por defecto.</p>
 			</div>
 		</div>		
 		<div class="row project">
 			<div class="col">
-				<h1><b>Group Projects</b></h1>
+				<h1><b>Proyectos Colaborativos</b></h1>
 				<hr>
 			</div>
 		</div>
@@ -151,35 +151,35 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">2048 (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">Games</span> 
-					<span class="badge badge-light">Matrix operations</span> 
-					<span class="badge badge-light">GUI programming</span> 
-					<span class="badge badge-light">Listeners</span>
+					<span class="badge badge-light">Videojuegos</span> 
+					<span class="badge badge-light">Operaciones de matriz </span> 
+					<span class="badge badge-light">Programación de GUI</span> 
+					<span class="badge badge-light">Oyentes</span>
 				</h6>
-				<p>First part of AP Computer Science final project during high school. Replica of the original game built from scratch. Exercise for graphics with the Swing widget toolkit and listening to keyboard inputs.</p>
+				<p>La 1a parte del proyecto final de AP Computer Science durante la escuela secundaria. Una réplica del videojuego original hecha desde cero. Un ejercicio para gráficos con el Swing kit de herramientas de aparatos y uno para oir a entradas del teclado.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">Pong (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">Games</span> 
-					<span class="badge badge-light">GUI programming</span> 
-					<span class="badge badge-light">Listeners</span>
+					<span class="badge badge-light">Videojuegos</span> 
+					<span class="badge badge-light">Programación de GUI</span> 
+					<span class="badge badge-light">Oyentes</span>
 				</h6>
-				<p>Second part of AP Computer Science final project during high school. Replica of the original game, also built from scratch. Another exercise for making graphical games and handling keyboard input.</p>
+				<p>La 2a parte del proyecto final de AP Computer Science durante la escuela secundaria. Una réplica del videojuego original, hecha desde cero también. Un otro ejercicio para hacer videojuegos gráficos y oir a entradas del teclado.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" class="name">Blackjack (Java)</a></h3>
 				<h6>
-					<span class="badge badge-light">Object oriented programming</span> 
-					<span class="badge badge-light">Testing</span> 
-					<span class="badge badge-light">Data structures</span> 
-					<span class="badge badge-light">Exception handling</span>
+					<span class="badge badge-light">Programación orientada a objetos</span> 
+					<span class="badge badge-light">Pruebas</span> 
+					<span class="badge badge-light">Estructuras de datos</span> 
+					<span class="badge badge-light">Manejo de errores</span>
 				</h6>
-				<p>Yet another AP Computer Science project, and the first game I made from scratch. Played on the command line, and supports multiple human players as well as naive computer players.</p>
+				<p>Un otro proyecto de AP Computer Science, y el primero videojuego que hice desde cero. Se juega en la línea de comando, y el videojuego soporte múltiples jugadores humanos tanto como jugadores de computadora ingenuinos.</p>
 			</div>
 		</div>
 	</div>
