--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -105,7 +105,7 @@
 						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link link" href="files/resume.pdf" download><b>Currículum (Inglés)</b></a>
+						  <a class="nav-link link" href="../files/resume.pdf" download><b>Currículum (Inglés)</b></a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://github.com/jasonkimprojects"><b>GitHub</b></a>
