Updated website with Rosalind

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
 					<br>
 					<h2>I'm a Junior</h2>
-					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development. (bioinformatics, computer vision and ML, databases, etc.)</p>
+					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development (bioinformatics, computer vision and ML, databases, etc.), and one day I hope to contribute to the automation of diagnosing and treating diseases for accessible and affordable healthcare worldwide. For the 2019-2020 school year, I am actively seeking a position in research or an internship related to my aforementioned interests.</p>
 					<br>
 					<h2>I develop</h2>
 					<p>In C++, C, and Java proficiently. I have been picking up lots of Python recently from academic projects. Writing this website has improved my HTML and CSS skills. Some more languages that I speak here and there are Bash, MATLAB, JavaScript, SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
