--- a/korean/index-kr.html
+++ b/korean/index-kr.html
@@ -123,7 +123,7 @@
 		    <div class="col-md-8">
 		    	<div class="col-md-12">
 					<h2 style="color: #FFA500">안녕하세요, 김종성입니다.</h2>
-					<p>저는 미국 미시간 주 앤 아버 시 소재 미시간 대학교 3학년에 재학 중입니다. 전공은 본교 공과대학의 컴퓨터과학과이며, 부전공은 본교 인문자연과학대학의 생물학과입니다. 저의 학업 관련 관심사는 사이버 보안과 생물정보학, 컴퓨터 비전, 기계학습, 데이터베이스 등을 포함한 의료용 소프트웨어 개발입니다.</p>
+					<p>저는 미국 미시간 주 앤 아버 시 소재 미시간 대학교 3학년에 재학 중입니다. 전공은 본교 공과대학의 컴퓨터과학과이며, 부전공은 본교 인문자연과학대학의 생물학과입니다. 저의 학업 관련 관심사는 사이버 보안과 생물정보학, 컴퓨터 비전, 기계학습, 데이터베이스 등을 포함한 의료용 소프트웨어 개발입니다. 저의 장기 목표는 질병을 진단하고 치료하는 과정을 자동화하는 데에 기여하고, 이로써 접근하기 쉽고 저렴한 의료 서비스를 세계에 배포하는 것입니다. 저는 2019-2020학년도 동안 상단에 명시된 저의 관심사와 관련이 있는 연구 혹은 인턴십에서의 자리를 찾고 있습니다.</p>
 					<br>
 					<h2>저는 개발을</h2>
 					<p>C++, C, 그리고 Java어로 주로, 그리고 가장 오랬동안 하였습니다. 최근에는 수업 내 프로젝트 여러 가지로 Python을 많이 습득하는 중입니다. 또한 이 웹사이트를 만들며 HTML과 CSS를 복습하고 응용해 나가고 있습니다. 능숙하지는 않지만 어느 정도 지식을 가지고 있는 언어는 Bash, MATLAB, JavaScript, SQL 그리고 몇 가지 종류의 어셈블리어 (x86, MIPS, ARMv8) 가 있습니다.</p>
