--- a/spanish/projects-es.html
+++ b/spanish/projects-es.html
@@ -97,6 +97,24 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - En Progreso</a></h3>
+				<h6>
+					<span class="badge badge-light">Bioinformática</span>
+					<span class="badge badge-light">Biología computacional</span>
+					<span class="badge badge-light">Estructuras de datos</span>
+					<span class="badge badge-light">Algoritmos</span>
+					<span class="badge badge-light">Técnicas de resolución de problemas</span>
+					<span class="badge badge-light">Relaciones de recurrencia</span>
+					<span class="badge badge-light">Teoría de grafos</span>
+					<span class="badge badge-light">Programación dinámica</span>
+					<span class="badge badge-light">Combinatoria y probabilidad</span>
+					<span class="badge badge-light">Secuencias y series</span>
+				</h6>
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Enlace al sitio web)</a> es una plataforma para problemas y algoritmos de programación bioinformática. Es un proyecto conjunto entre la Universidad de California en San Diego, Universidad Académica de San Petersburgo, y la Academia Rusa de Ciencias. Mi cuenta GitHub contiene mis soluciones propias a los problemas de Rosalind, implementadas en Python y listadas por ID del problema.</p> 
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
 				<h6>
 					<span class="badge badge-light">Librería</span> 
