--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,24 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - In Progress</a></h3>
+				<h6>
+					<span class="badge badge-light">Bioinformatics</span>
+					<span class="badge badge-light">Computational Biology</span>
+					<span class="badge badge-light">Data structures</span>
+					<span class="badge badge-light">Algorithms</span>
+					<span class="badge badge-light">Problem solving techniques</span>
+					<span class="badge badge-light">Recurrence relations</span>
+					<span class="badge badge-light">Graph theory</span>
+					<span class="badge badge-light">Dynamic programming</span>
+					<span class="badge badge-light">Combinatorics and probability</span>
+					<span class="badge badge-light">Sequences and series</span>
+				</h6>
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Link to homepage)</a> is a platform for bioinformatics programming questions and algorithms. It is a "joint project between the University of California at San Diego, Saint Petersburg Academic University, and the Russian Academy of Sciences. Rosalind is partly funded by a Howard Hughes Medical Institute Professor Award and a Russian Megagrant Award received by Pavel Pevzner." My repository contains my own solutions to Rosalind's problems, implemented in Python and listed by problem ID.</p> 
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
 				<h6>
 					<span class="badge badge-light">Library</span> 
