Updated Rosalind descriptions

--- a/korean/index-kr.html
+++ b/korean/index-kr.html
@@ -114,6 +114,9 @@
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://keybase.io/nosajmik"><b>Keybase</b></a>
 						</li>
+						<li class="nav-item">
+						  <a class="nav-link link" href="http://rosalind.info/users/nosajmik/"><b>Rosalind</b></a>
+						</li>
 					</ul>
 					<!-- Only show line on small screens -->
 					<hr class="d-md-none" style="margin-bottom: 30px">
