--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
 					<span class="badge badge-light">Combinatorics and probability</span>
 					<span class="badge badge-light">Sequences and series</span>
 				</h6>
-				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Link to homepage)</a> is a platform for bioinformatics programming questions and algorithms. It is a "joint project between the University of California at San Diego, Saint Petersburg Academic University, and the Russian Academy of Sciences. Rosalind is partly funded by a Howard Hughes Medical Institute Professor Award and a Russian Megagrant Award received by Pavel Pevzner." My repository contains my own solutions to Rosalind's problems, implemented in Python and listed by problem ID.</p> 
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Link to homepage)</a> is a platform for bioinformatics programming questions and algorithms. It is a "joint project between the University of California at San Diego, Saint Petersburg Academic University, and the Russian Academy of Sciences. Rosalind is partly funded by a Howard Hughes Medical Institute Professor Award and a Russian Megagrant Award received by Pavel Pevzner." My repository contains my own solutions to Rosalind's problems, implemented in Python and listed by problem ID. As of August 7, 2019, I rank within the top 1% of users by number of problems solved correctly.</p> 
 			</div>
 		</div>
 		<div class="row project">
