--- a/spanish/projects-es.html
+++ b/spanish/projects-es.html
@@ -110,7 +110,7 @@
 					<span class="badge badge-light">Combinatoria y probabilidad</span>
 					<span class="badge badge-light">Secuencias y series</span>
 				</h6>
-				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Enlace al sitio web)</a> es una plataforma para problemas y algoritmos de programación bioinformática. Es un proyecto conjunto entre la Universidad de California en San Diego, Universidad Académica de San Petersburgo, y la Academia Rusa de Ciencias. Mi cuenta GitHub contiene mis soluciones propias a los problemas de Rosalind, implementadas en Python y listadas por ID del problema.</p> 
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Enlace al sitio web)</a> es una plataforma para problemas y algoritmos de programación bioinformática. Es un proyecto conjunto entre la Universidad de California en San Diego, Universidad Académica de San Petersburgo, y la Academia Rusa de Ciencias. Mi cuenta GitHub contiene mis soluciones propias a los problemas de Rosalind, implementadas en Python y listadas por ID del problema. A partir del 7 de agosto 2019, estoy en el 1% superior de usuarios por número de problemas resueltos.</p> 
 			</div>
 		</div>
 		<div class="row project">
