--- a/korean/projects-kr.html
+++ b/korean/projects-kr.html
@@ -108,7 +108,7 @@
 					<span class="badge badge-light">조합론과 확률</span>
 					<span class="badge badge-light">수열과 급수</span>
 				</h6>
-				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(홈페이지 링크)</a> 는 생물정보학과 관련된 프로그래밍 질문과 알고리즘을 제공하는 기반입니다. 캘리포니아 대학교 샌디에이고, 러시아 상트페테르부르크 아카데미 대학, 그리고 러시아 과학 협회가 공동으로 관리합니다. 저의 저장소는 Rosalind의 문제에 대해 Python으로 구현된 저의 해법을 담고 있으며, 문제 아이디를 기준으로 나열되어 있습니다.</p> 
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(홈페이지 링크)</a> 는 생물정보학과 관련된 프로그래밍 질문과 알고리즘을 제공하는 기반입니다. 캘리포니아 대학교 샌디에이고, 러시아 상트페테르부르크 아카데미 대학, 그리고 러시아 과학 협회가 공동으로 관리합니다. 저의 저장소는 Rosalind의 문제에 대해 Python으로 구현된 저의 해법을 담고 있으며, 문제 아이디를 기준으로 나열되어 있습니다. 2019년 8월 7일자로, 저는 해결한 문제의 갯수를 기준으로 상위 1% 내의 유저가 되었습니다.</p> 
 			</div>
 		</div>
 		<div class="row project">
