Updated with links and content on ZeroSteg

--- a/korean/projects-kr.html
+++ b/korean/projects-kr.html
@@ -95,6 +95,17 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://jasonkimprojects.github.io/zerosteg/" class="name">ZeroSteg (HTML, CSS, JavaScript)</a></h3>
+				<h6>
+					<span class="badge badge-light">스테가노그래피</span>
+					<span class="badge badge-light">웹 기반 프로그램</span>
+					<span class="badge badge-light">유니코드, 그리고 넓이가 0인 문자</span>
+				</h6>
+				<p>문자 메시지를 또 다른 문자 속에 숨기고 드러내는 웹 기반 프로그램입니다. ZeroSteg는 유니코드 내 넓이가 0인 문자 둘, zero-width joiner와 zero-width non-joiner를 사용하여 메시지를 숨깁니다. 상단 링크는 ZeroSteg 웹페이지로 바로 연결됩니다. 소스 코드를 포함한 프로젝트 저장소를 열람하시려면, <a href="https://github.com/jasonkimprojects/zerosteg" class="name">여기</a>를 클릭하세요.</p>
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - 진행 중</a></h3>
 				<h6>
 					<span class="badge badge-light">생물정보학</span>
