--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,17 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://jasonkimprojects.github.io/zerosteg/" class="name">ZeroSteg (HTML, CSS, JavaScript)</a></h3>
+				<h6>
+					<span class="badge badge-light">Steganography</span>
+					<span class="badge badge-light">Interactive website</span>
+					<span class="badge badge-light">Unicode and zero-width characters</span>
+				</h6>
+				<p>A web-based steganography program to encode and decode a text message within another text message. ZeroSteg takes advantage of the zero-width joiner and non-joiner characters in Unicode. The link on the title goes directly to the ZeroSteg website. If you wish to see the project repository for ZeroSteg including its source code, click <a href="https://github.com/jasonkimprojects/zerosteg" class="name">here.</a></p>
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - In Progress</a></h3>
 				<h6>
 					<span class="badge badge-light">Bioinformatics</span>
