--- a/spanish/projects-es.html
+++ b/spanish/projects-es.html
@@ -97,6 +97,17 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://jasonkimprojects.github.io/zerosteg/" class="name">ZeroSteg (HTML, CSS, JavaScript)</a></h3>
+				<h6>
+					<span class="badge badge-light">Esteganografía</span>
+					<span class="badge badge-light">Sitio de web interactivo</span>
+					<span class="badge badge-light">Unicode y caracteres de cero anchura</span>
+				</h6>
+				<p>Un programa de esteganografía basado en el web, para cifrar y decifrar mensajes de texto adentro de un otro texto. ZeroSteg usa los caracteres “joiners” y “non-joiners” con cero anchura en Unicode. El enlace en el título va directamente al sitio web de ZeroSteg. Si quiere ver el repositorio del proyecto incluyendo el código fuente, haga click <a href="https://github.com/jasonkimprojects/zerosteg" class="name">aquí.</a></p>
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - En Progreso</a></h3>
 				<h6>
 					<span class="badge badge-light">Bioinformática</span>
