Added coursework in progress

--- a/coursework.html
+++ b/coursework.html
@@ -87,6 +87,9 @@
 				<div class="alert alert-success">
 					<p style="margin-bottom: 0px">The following is a list of the courses I have taken at the <a href="https://umich.edu" style="color: #FFA500">University of Michigan.</a> I have listed programming projects alongside each course where applicable. I am bound by the Engineering Honor Code at U-M not to release those projects to the public. Consequently, a brief description of the work is the furthest extent that I am able to disclose. For more information, click <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: #FFA500">here.</a></p>
 				</div>
+				<div class="alert alert-warning">
+					<p style="margin-bottom: 0px">I am currently enrolled in EECS 376 (Foundations of Computer Science) and EECS 485 (Web Systems) for this Fall 2019 semester. I will update this page with project work in these courses after I have completed them.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row course">
