--- a/korean/coursework-kr.html
+++ b/korean/coursework-kr.html
@@ -85,6 +85,9 @@
 				<div class="alert alert-success">
 					<p style="margin-bottom: 0px">다음은 제가 <a href="https://umich.edu" style="color: #FFA500">미시간 대학교</a> 에서 지금까지 수강한 수업의 목록입니다. 각각의 수업 하에는 그 수업의 프로그래밍 프로젝트를 나열하였습니다. 저는 미시간 대학교 공과대학의 학칙 (Honor Code) 으로 인하여 프로젝트의 소스 코드는 외부에 공개할 수 없습니다. 이로 인해 제가 학업 관련 프로젝트에 대해 공개할 수 있는 정도는 프로젝트에 대한 간단한 요약이 최대치입니다. 추가 정보를 보시려면 <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: #FFA500">여기</a>를 클릭하세요.</p>
 				</div>
+				<div class="alert alert-warning">
+					<p style="margin-bottom: 0px">이번 2019년 가을 학기에 저는 EECS 376 (컴퓨터 과학의 토대) 와 EECS 485 (웹 시스템) 을 수강하고 있습니다. 두 수업의 프로젝트 관련 업무는 수업을 완료한 후 이 페이지에 업데이트 하겠습니다.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row course">
