--- a/spanish/coursework-es.html
+++ b/spanish/coursework-es.html
@@ -87,6 +87,9 @@
 				<div class="alert alert-success">
 					<p style="margin-bottom: 0px">La siguiente es una lista de clases que he tomado a la <a href="https://umich.edu" style="color: #FFA500">Universidad de Míchigan.</a> He listado los proyectos de programación junto a cada clase donde sea aplicable. Estoy obligado al Engineering Honor Code en la U-M a no liberar los proyectos al público. Por consiguiente lo más que puedo decir del trabajo es una descripción corta. Para más información, haga click <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: #FFA500">aquí.</a></p>
 				</div>
+				<div class="alert alert-warning">
+					<p style="margin-bottom: 0px">Este semestre del otoño 2019, estoy inscrito en EECS 376 (Fundaciones de Ciencias de la Computación) y EECS 485 (Sistemas Web). Actualizaré esta página web con mi trabajo de los proyectos en esas clases después de finalizárlas.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row course">
